--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build and Test default scheme using any available iPhone simulator
+    name: Build and Test using any available iPhone simulator
     runs-on: macos-latest
 
     steps:
@@ -20,18 +20,8 @@ jobs:
         run: |
           echo "$content" > "GitHeart/Env.swift"
       - name: Build
-        env:
-          scheme: "GitHeart"
-          platform: ${{ 'iOS Simulator' }}
         run: |
-          # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}'`
-          xcodebuild build-for-testing -scheme "$scheme" -project "GitHeart.xcodeproj" -destination "platform=$platform,name=$device"
+          ./scripts/build
       - name: Test
-        env:
-          scheme: "GitHeart"
-          platform: ${{ 'iOS Simulator' }}
         run: |
-          # xcrun xctrace returns via stderr, not the expected stdout (see https://developer.apple.com/forums/thread/663959)
-          device=`xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}'`
-          xcodebuild test-without-building -scheme "$scheme" -project "GitHeart.xcodeproj" -destination "platform=$platform,name=$device"
+          ./scripts/test_without_building
